<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>2019-ma-ma-group-05</groupId>
  <artifactId>2019-ma-ma-group-05</artifactId>
  <version>0.0.1-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <packaging>jar</packaging>

  <name>2019-ma-ma-group-05</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
  		<dependency>
			<groupId> org.uqbar-project </groupId>
			<artifactId> jpa-java8-extras </artifactId> <!--es la que se trae hibernate(orm)-->
			<version> 1.0-alpha-1 </version>
		</dependency>
		<dependency>
			<groupId> mysql </groupId>
			<artifactId> mysql-connector-java </artifactId> <!--driver de conexion a la BD-->
			<version> 5.1.26 </version>
		</dependency>
		<dependency>
			<groupId> org.hsqldb </groupId>
			<artifactId> hsqldb </artifactId> <!--driver de conexion a la BD en memoria-->
			<version> 2.2.8 </version>
		</dependency>
	  <!-- Dependencias de Spark -->
	  <dependency>
		  <groupId>org.slf4j</groupId>
		  <artifactId>slf4j-simple</artifactId>
		  <version>1.7.21</version>
	  </dependency>
	  <dependency>
		  <groupId>com.sparkjava</groupId>
		  <artifactId>spark-core</artifactId>
		  <version>2.5</version>
	  </dependency>
	  <dependency>
		  <groupId>com.sparkjava</groupId>
		  <artifactId>spark-template-handlebars</artifactId>
		  <version>2.5.5</version>
	  </dependency>
	  <dependency>
		  <groupId>com.sparkjava</groupId>
		  <artifactId>spark-debug-tools</artifactId>
		  <version>0.5</version>
	  </dependency>
	  <dependency>
		  <groupId>com.github.jknack</groupId>
		  <artifactId>handlebars-helpers</artifactId>
		  <version>4.0.6</version>
	  </dependency>
	  <dependency>
		  <groupId>com.github.jknack</groupId>
		  <artifactId>handlebars-humanize</artifactId>
		  <version>4.0.6</version>
	  </dependency>
   	<dependency>
    	<groupId>org.mockito</groupId>
    	<artifactId>mockito-core</artifactId>
    	<version>2.7.2</version>
    	<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>javax.mail</groupId>
		<artifactId>javax.mail-api</artifactId>
		<version>1.5.6</version>
	</dependency>
	<dependency>
    <groupId>com.sun.mail</groupId>
    <artifactId>javax.mail</artifactId>
    <version>1.6.1</version>
</dependency>
	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
	<dependency>
	    <groupId>javax.mail</groupId>
	    <artifactId>mail</artifactId>
	    <version>1.4</version>
	</dependency>
  	<dependency>
    	<groupId>com.squareup.retrofit</groupId>
    	<artifactId>converter-jackson</artifactId>
    	<version>1.9.0</version>
    	<scope>runtime</scope>
	</dependency>
	<dependency>
    	<groupId>com.twilio.sdk</groupId>
    	<artifactId>twilio</artifactId>
    	<version>7.0.0</version>
    	<scope>compile</scope>
	</dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>com.google.code.gson</groupId>
    	<artifactId>gson</artifactId>
    	<version>2.8.5</version>
    </dependency>
    <dependency>
  		<groupId>com.squareup.retrofit2</groupId>
  		<artifactId>converter-gson</artifactId>
  		<version>2.5.0</version>
	</dependency>
 	<dependency>
  		<groupId>com.squareup.retrofit2</groupId>
  		<artifactId>retrofit</artifactId>
  		<version>2.5.0</version>
	</dependency>
	<dependency>
    <groupId>com.github.jai-imageio</groupId>
    <artifactId>jai-imageio-core</artifactId>
    <version>1.3.0</version>
</dependency>
  </dependencies>
</project>
